Fix input zoom + numeric input on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,8 @@
 html {
     transition: background-color .2s !important;
 }
+
+input {
+    font-size: 16px;
+    touch-action: manipulation;
+}
